<resources>
    <string name="app_name">HackEducation</string>
    <string name="courses">Курсы</string>
    <string name="top">Рейтинг</string>
    <string name="profile">Профиль</string>
    <string name="enter">Войти</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="dateHint">Дата рождения</string>
    <string name="regist">Регистрация</string>
    <string name="go">Вперёд!</string>
    <string name="great">Отлично!</string>
    <string name="done">Готово</string>
    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="all_skills">Достижения</string>
    <string name="hide_skills">Скрыть навыки</string>
    <string name="where">Где я?</string>
    <string name="number_of_theme">Номер темы</string>
    <string name="name_of_theme">Название темы</string>
    <string name="create">Добавить</string>
    <string name="add_header">Добавить заголовок</string>
    <string name="add_text">Добавить текст</string>
    <string name="text_title">Заголовок</string>
    <string name="text_path">Текст</string>
    <string name="add_list">Добавить список</string>
    <string name="text_desc">Описание</string>
</resources>