<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_success"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/success_dialog"
        style="@style/MiddleBackground"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ach_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_title_alert_dialog"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:text="@string/add_list"/>

        <ImageView
            android:id="@+id/close_desc"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/ach_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ach_title"
            android:src="@drawable/add"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ach_title"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_add_path_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/button"
        android:layout_marginStart="40dp"
        android:text="@string/create"
        android:layout_marginEnd="40dp"
        app:backgroundTint="@color/teal_200"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/success_dialog"
        app:layout_constraintTop_toBottomOf="@id/success_dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>