<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back_confetti"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/register_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nameTextContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startVertical"
        app:cardCornerRadius="50dp"
        app:contentPaddingRight="24dp"
        app:contentPaddingLeft="24dp"
        app:contentPadding="20dp"
        app:strokeColor="#F1EFEF"
        app:strokeWidth="7dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regist"
            style="@style/Title_in_instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nameTextContainer"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:cardCornerRadius="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_container"
        app:strokeColor="#F1EFEF"
        app:strokeWidth="7dp">

        <EditText
            android:id="@+id/nameText"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/name"
            android:autofillHints="@string/name" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/errorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="20dp"
        android:text="dssf"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/c_red"
        app:layout_constraintStart_toStartOf="@+id/nameTextContainer"
        app:layout_constraintTop_toBottomOf="@+id/nameTextContainer" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/surnameTextContainer"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:cardCornerRadius="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="28dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextContainer"
        app:strokeColor="#F1EFEF"
        app:strokeWidth="7dp">

        <EditText
            android:id="@+id/surnameText"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/surname"
            android:inputType="textPersonName|textCapWords"
            android:autofillHints="@string/surname" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/errorSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="20dp"
        android:text="dssf"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/c_red"
        app:layout_constraintStart_toStartOf="@+id/surnameTextContainer"
        app:layout_constraintTop_toBottomOf="@+id/surnameTextContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        app:icon="@drawable/calendar"
        android:lines="2"
        android:layout_height="wrap_content"
        app:autoSizeTextType="uniform"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="17dp"
        android:text="@string/dateHint"
        app:iconTint="@color/c_blue"
        style="@style/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_button_birthday"
        app:layout_constraintTop_toBottomOf="@id/surnameTextContainer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        style="@style/BodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="@id/datePicker"
        app:layout_constraintEnd_toEndOf="@id/start_button_birthday"
        app:layout_constraintTop_toTopOf="@id/datePicker"
        tools:text="14.04.2003" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_button_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/done">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_enter"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/done"
            style="@style/ButtonText" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>